# paper-cuts

./: .gitignore  GOAL.md  NEW_TODO.md  PHASE1.md  README.md  RUNBOOK-chloe.md  RUNBOOK-recognizer.md  RUNBOOK-trackb.md  controller.html  docker-compose.redis.yml  drawpad.html  index.html  ipadsetup.md  package-lock.json  package.json  render.yaml  run-instructions.md  server.js  style.css
backend/: .env.example  pyproject.toml
backend/app/: agent_runtime.py  config.py  finishers.py  main.py  orchestrator.py  paper_trail.py  rooms.py  schemas.py  semantic.py
backend/tests/: test_api.py
data/: chloe_pairs.jsonl  gen_chloe_dataset.py  gen_chloe_dataset_rules.py  gen_chloe_graph_dataset.py  get_quickdraw.py
docs/: 05-editor.md  10-modes-and-maps.md  13-ipad-drawing-capture-and-editor-seams.md  14-visual-creation-phases.md  15-creation-patch-contract.md  16-agent-clarification-loop.md  17-runtime-ai-pipeline-status.md  README.md  devpost.md  paper-trail.md  pitch-script.md
draw-client/: .env.example  index.html  package-lock.json  package.json  vite.config.js
js/: ai.js  audio.js  campad.js  character.js  createOverlay.js  data.js  draw.js  drawpad.js  editor.js  effects.js  fighter.js  finishers.js  game.js  graph.js  input.js  levelPreview.js  magicBoardGame.js  main.js  mechanics.js  modes.js  net.js  physics.js  prop.js  rng.js  skin.js  stage.js  stageReferenceData.js  ultimateRecorder.js  worldLibrary.js
tests/: desktopSmoke.test.mjs  magicBoardGame.test.mjs
tools/: gen-fire-finisher.mjs
train/: requirements-chloe-peft.txt  requirements-chloe.txt  (+4 more)
(+14 files in other folders)
